<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginStart="10dp"
    android:paddingRight="10dp"
    >
    <!--    <androidx.appcompat.widget.Toolbar-->
    <!--        android:id="@+id/reserve_icon"-->
    <!--        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
    <!--        app:popupTheme="@style/Theme.AppCompat.Light"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="?attr/colorPrimary"-->
    <!--        -->
    <!--        android:elevation="4dp"/>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/keyword"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/keyword"
        android:textColor="@color/black"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/distance"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:layout_marginTop="140dp"
        android:autofillHints="no"
        android:hint="@string/distance"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="108dp"
        android:layout_height="27dp"
        android:layout_marginTop="195dp"
        android:text="@string/category"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/cate"
        android:layout_width="181dp"
        android:layout_height="32dp"
        android:layout_marginTop="235dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Spinner>

    <EditText
        android:id="@+id/location"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:layout_marginTop="270dp"
        android:autofillHints="no"
        android:hint="@string/location"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:buttonTint="@color/purple"
        android:text="@string/auto_check"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="400dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginRight="70dp"
        android:text="@string/clear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="470dp"
        android:text="@string/results"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/no_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/red"
        android:text="No Results Found!"
        android:layout_marginTop="540dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_marginTop="540dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>