<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusDetailFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="255dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="30dp"
                    android:text="@string/address"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/Address_text"
                    android:layout_width="250dp"
                    android:layout_height="70dp"
                    android:text="textView"
                    android:paddingRight="20dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/price"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/Price_text"
                    android:layout_width="155dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="textView"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/phone"
                    android:paddingLeft="10dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:paddingLeft="8dp"
                    android:id="@+id/Phone_text"
                    android:layout_width="240dp"
                    android:layout_height="70dp"
                    android:paddingRight="20dp"
                    android:text="textView"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="135dp"
                    android:layout_height="30dp"
                    android:text="@string/status"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:id="@+id/Status_text"
                    android:layout_width="135dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="open now"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/cate"
                    android:paddingLeft="10dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:paddingRight="20dp"
                    android:textColor="@color/black"
                    android:id="@+id/category_text"
                    android:layout_width="wrap_content"
                    android:paddingLeft="10dp"
                    android:layout_height="70dp"
                    android:text="textView"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/visitYelp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:id="@+id/Url_text"
                    android:layout_width="155dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/link"
                    android:textColor="@color/blue"/>
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/reserve_btn"
            android:layout_width="170dp"
            android:layout_height="57dp"
            android:text="@string/reserve"
            android:layout_gravity="center"/>


                <LinearLayout
            android:paddingTop="30dp"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingBottom="5dp">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
        </LinearLayout>


    </LinearLayout>

</FrameLayout>